???? 1.0.0.6
    programmer visible changes:
    * Fixed missing import in instlAdmin.py

18/10/2015 1.0.0.5

    user visible changes, client:
    * Finding cookie for url by domain is now case insensitive

14/10/2015 1.0.0.4

 user visible changes, client:
 * Support for cookies per domain with variable COOKIE_JAR
 * Better error for exception from join_split_files

12/10/2015 1.0.0.3

    user visible changes, client:
    * Moved the folder creation during copy to after the pre_copy step so that uninstalls from pre_copy will not erase important folders.

12/10/2015 1.0.0.2

    user visible changes, admin:
    * Added Mac unlocking (chflags -R nouchg) to fix-perm command, after imports from Windows machine brought locked files.

8/10/2015 1.0.0.1

    programmer visible changes:
    * Added initialization of USER_CACHE_DIR to init_copy_vars and init_sync_vars

6/10/2015 1.0.0.0

    user visible changes, admin:
    * New option --all-revisions to commands create-links and up2s3

1/10/2015 0.12.0.2

    user visible changes, admin:
    * Fixed missing import stat


1/10/2015 0.12.0.1

    user visible changes, client:
    * Fixed file-size related str/int confusion

    programmer visible changes:
    * Removed calculation of get_disk_free_space which are now done elsewhere.

1/10/2015 0.12.0.0

    user visible changes, client:
    * Added help for test-import command.
    * Added new packages (utils, svnTree, configVar) to test-import.

    programmer visible changes:
    * Integrated support for checking file sizes from file-sizes branch.

21/9/2015 0.11.0.5

    user visible changes, client:
    * Better default definition of LOCAL_SYNC_DIR based on USER_CACHE_DIR.

    programmer visible changes:
    * Solved an issue with __include__ tha does copy without checksum

20/9/2015 0.11.0.4

    user visible changes, client:
    * When reading __include__ statements, if a file does not have a checksum specification it will not be cached.
